create html, css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>My GitHub Page</title>
-</head>
-<body>
-  <h1>Hello, GitHub Pages!</h1>
-  <p>This is my first GitHub Page.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h2>안정환의 포트폴리오</h2>
+    <p>안녕하세요, 저는 안정환입니다. 저를 소개합니다.</p>
+  </body>
 </html>
