--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>안정환의 포트폴리오</h1>
-    <p>안녕하세요, 저는 안정환입니다. 저를 소개합니다.</p>
+    <div>
+      <h2>안정환의 포트폴리오</h2>
+      <hr />
+      <p>안녕하세요, 저는 안정환입니다. 저를 소개합니다.</p>
+    </div>
+
+    <div>
+      <h2>Education</h2>
+      <hr />
+      <h3>인하대학교</h3>
+      <p>2020.03 ~ 현재</p>
+      <p>전기전자공학 전공</p>
+    </div>
   </body>
 </html>
